# Drones

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
data/: README.md
docs/: EXPERIMENTOS.md  OPTIMIZACION_T4.md
examples/: prompts_example.json  sample_coco_categories.json
reports/: experiment_summary.csv  experiment_summary.md  experiment_summary_by_class.csv  experiment_summary_by_class.md
scripts/: 00_clean_coco_segmentation.py  01_validate_coco.py  02_split_coco.py  03_train_sam.py  04_evaluate_sam.py  05_infer_with_prompts.py  06_generate_auto_masks.py  07_visualize_coco.py  08_run_experiments.py  09_evaluate_baseline_detection.py  10_profile_hardware.py  11_summarize_by_class.py
src/sam_electric/: __init__.py  coco.py  corruptions.py  dataset.py  hardware.py  metrics.py  processor.py  utils.py  visualization.py
src/sam_electric_finetuning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
